<resources>
    <string name="app_name">Go Transit Alert</string>
    <string name="change_theme_key">change_theme_key</string>

    <string name="action_about">About</string>
    <string name="action_bugs">Report Bugs</string>
    <string name="action_privacy">Privacy</string>
    <string name="action_speech">Speech</string>
    <string name="action_settings">Settings</string>

    <string name="authentication_login_error_email_empty">Enter Email</string>
    <string name="authentication_login_error_password_empty">Enter Password</string>
    <string name="authentication_credentials_wrong">Authentication failed, check your email and password or sign up</string>
    <string name="authentication_reset_error_email_empty">Enter Email</string>
    <string name="authentication_sign_up_error_email_empty">Enter Email</string>
    <string name="authentication_sign_up_error_password_empty">Enter Password</string>

    <string name="button_back">Back</string>
    <string name="button_login">Login</string>
    <string name="button_reset_password">Reset Password</string>
    <string name="button_change">Change</string>
    <string name="button_forgot_password">Forgot your password?</string>
    <string name="button_send">Send</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="button_sign_out">Sign Out</string>
    <string name="button_remove">Remove</string>
    <string name="button_create_account">Create Account</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="error_invalid_email">Invalid Email Address</string>
    <string name="error_password_too_short">Password To Short</string>
    <string name="error_enter_email">Enter Email</string>
    <string name="error_enter_password">Enter password</string>

    <string name="feed_back_email_subject">IBM EBC Briefing App Feedback</string>

    <string name="hint_email">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="hint_repassword">RE Password</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>

    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>

    <string name="title_fonts_appearances">Fonts and Appearances</string>
    <string name="title_wifi_data">Wifi and Data</string>
    <string name="title_notifications">Notifications</string>

    <string name="theme_title_change">Change Theme Colors</string>
    <string name="theme_title_list_dialog">Choose Theme Color</string>
    <string name="theme_summary">Change the primary, primary dark and accent colors</string>

    <string name="data_title">Only Update Data Wi-Fi</string>
    <string name="data_summary_on">Only update data etc. over Wi-Fi</string>
    <string name="data_summary_off">Update over Wi-Fi and Data Plan</string>

    <string name="about_title">About Version</string>
    <string name="about_summary">Help, Terms of Service, Privacy Policy, Cookies Use</string>

    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>

    <string name="pref_sync_frequency">Sync frequency</string>
    <string name="pref_sync_frequency_summary">Set the sync frequency</string>

    <string name="pref_title_change_theme">Change App Theme</string>

    <string name="pref_user_name">Set username</string>
    <string name="pref_user_name_summary">Set your username</string>
    <string name="pref_user_profile">User Profile</string>

    <string name="pref_update_setting">Update Settings</string>

    <string name="search_hint">Search Program</string>
    <string name="search_title">Search</string>

    <string name="summary_list_theme">Press to Change the primary, primary dark and accent colors</string>

    <string name="accept">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="snackbar_action_undo">Snackbar</string>

    <string name="email">Email</string>
    <string name="action_sign_in_short">Register</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="hint_name">Fullname</string>

    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <string name="button_sign_Up">Sign Up</string>

    <string name="textview_user_first_Last_name">Brian Donaldson</string>
    <string name="textview_user_email">bdonaldsca@gmail.com</string>
    <string name="textview_sign_up">Not a member? Get registered</string>
    <string name="textview_forgot_password">Forgot Your Password?</string>
    <string name="textview_to_login">Already Registered. Login Me!</string>

    <!--App Message-->
    <string name="api_retry_error">Please retry!</string>
    <string name="api_default_error">Something wrong happened!</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="connection_error">Internet connection lost!</string>

    <!--feed-->
    <string name="title">My Feed</string>
    <string name="open_source">Open Source</string>
    <string name="blog">Blog</string>

    <!--empty state-->
    <string name="empty_screen">We do not have anything\nhere right now.</string>
    <string name="please_retry">Please Retry</string>
    <string name="retry">Retry</string>

    <string name="error_empty_input">Inputs may not be Empty</string>
    <string name="error_password_too_long">Password too long</string>

    <string name="title_legal">Legal</string>
    <string name="title_tos">Terms of Service</string>
    <string name="title_privacy_policy">Privacy Policy</string>

    <!--Login Validation-->
    <string name="empty_email">Please provide a non empty email.</string>
    <string name="invalid_email">Please provide a valid email.</string>
    <string name="empty_password">Please provide a non empty password.</string>


</resources>
